# Code-for-medAI

./: PLAN.md  README.md  pyproject.toml  run_pipeline.py
examples/: pipeline.json
examples/transformer_tutorial2/: resnet_multimodal_seg.ipynb  sam_multimodal_seg.ipynb  vit_multimodal_seg.ipynb
notebooks/: 01_sam_medical_segmentation.ipynb  02_titan_pathology.ipynb  03_clip_multimodal.ipynb
scripts/: run_notebook_smoke.py
src/medai_toolbox/: __init__.py  codegen.py  schema.py
tests/: test_notebook_smoke.py
tutorials/: clip_medical_tutorial.ipynb  multimodal_transformer_medical_segmentation_tutorial.ipynb  transformer_tutorial3_multimodal.ipynb  transformer_tutorial5_multimodal.ipynb
web/: app.js  index.html  style.css
