[project]
name = "medai-toolbox"
version = "0.1.0"
description = "Node-based medical AI toolbox MVP"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.scripts]
medai-generate = "medai_toolbox.codegen:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
